Fixet meget og kørt lokalt

--- a/Lokalt_test_cov_matrix_korrekt.ipynb
+++ b/Lokalt_test_cov_matrix_korrekt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "141e613d-79ae-4867-b819-bcdfe3c54ee4",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "c46034c3-c4de-44ae-a749-55585c796280",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "89413faf-1b22-46be-81f4-60bf3e713c6f",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "985c146d-d311-4387-8745-2fe92cd45122",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "680e0d83-3b35-40ea-bf05-0264e10513b9",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "e0773a2e-6762-4db4-86fb-950bb1721a4e",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "9faab0ad-a118-4f73-b77a-31262185c4da",
    "metadata": {},
    "outputs": [
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "46a4f520-b937-47c1-9b94-388bf9c07a35",
    "metadata": {},
    "outputs": [
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "447732b3-d290-4b41-8aea-6d322e0654a6",
    "metadata": {},
    "outputs": [],
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "14b7e314-5d82-4d24-aabc-c2f2a38bb222",
    "metadata": {},
    "outputs": [],
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "209cd4b0-f84a-4a1e-aac8-05997bdd23de",
    "metadata": {},
    "outputs": [
@@ -658,7 +658,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "570392ee-cdb9-4b90-9bb3-29e5bd600dce",
    "metadata": {},
    "outputs": [
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "3d5345b1-29e0-400a-9c19-eaba1cede121",
    "metadata": {},
    "outputs": [
@@ -1064,7 +1064,7 @@
        "[511500 rows x 32 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "b60a10b0-babd-4b1a-bd6a-89908464d965",
    "metadata": {},
    "outputs": [],
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "393ea46b-c360-4569-a949-4da5b9115cd8",
    "metadata": {},
    "outputs": [],
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "edcc037c-02f1-4302-b4f0-16299efe5dc2",
    "metadata": {},
    "outputs": [
@@ -1360,7 +1360,7 @@
        "[2978 rows x 5 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1379,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "def83c9d-66f2-4055-be31-8f2a808aeb5b",
    "metadata": {},
    "outputs": [],
@@ -1437,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "c2f78f2b-f153-46bc-ae0a-cf7fc801b5db",
    "metadata": {},
    "outputs": [],
@@ -1447,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "88470014-8f37-4514-ac36-c0b6100c16e8",
    "metadata": {},
    "outputs": [
@@ -1821,7 +1821,7 @@
        "[2978 rows x 26 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1840,7 +1840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "b6f0e55c-5913-424d-aea5-171960ee5d67",
    "metadata": {},
    "outputs": [],
@@ -1874,7 +1874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "1d97ae3e-f802-4e20-add1-49cbadc2d7f0",
    "metadata": {},
    "outputs": [
@@ -1993,7 +1993,7 @@
        "[511500 rows x 3 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2004,7 +2004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "71e89a3f-38d2-456b-b4d8-d9c068846e60",
    "metadata": {},
    "outputs": [],
@@ -2060,7 +2060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "64678fc0-a5e9-4a04-9920-9cc0cff596e4",
    "metadata": {},
    "outputs": [],
@@ -2070,7 +2070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "b8e8cceb-17e4-4463-abf6-db0129423ae3",
    "metadata": {},
    "outputs": [
@@ -2189,7 +2189,7 @@
        "[511500 rows x 3 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2200,36 +2200,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "d5e58b89-5f89-4c38-b56d-5518a00a4ba2",
+   "execution_count": 30,
+   "id": "bcb88a88-081d-456d-83b9-6643d5adb68f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_ewma(spec_risk, settings):\n",
+    "    \"\"\"\n",
+    "    Beregner EWMA-volatilitet per gruppe i en DataFrame.\n",
+    "\n",
+    "    Args:\n",
+    "        spec_risk (pd.DataFrame): DataFrame med kolonnerne 'id' og 'res'.\n",
+    "        settings (dict): Dictionary med 'cov_set' indeholdende 'hl_stock_var' og 'initial_var_obs'.\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: Opdateret DataFrame med en ny kolonne 'res_vol'.\n",
+    "\n",
+    "    Example:\n",
+    "    spec_risk_res_vol = calculate_ewma(spec_risk,settings)\n",
+    "    spec_risk_res_vol\n",
+    "    \"\"\"\n",
+    "\n",
+    "    lambda_val = 0.5 ** (1.0 / settings['cov_set']['hl_stock_var'])\n",
+    "    start_val = settings['cov_set']['initial_var_obs']\n",
+    "\n",
+    "    def apply_ewma(group):\n",
+    "        group = group.copy()  # Sikrer, at vi ikke ændrer originalen\n",
+    "        group['res_vol'] = ewma.ewma_c(group['res'].values, lambda_val, start_val)\n",
+    "        return group\n",
+    "    \n",
+    "    # Anvend EWMA per gruppe og returner den opdaterede DataFrame\n",
+    "    return spec_risk.groupby('id', group_keys=False, as_index=False).apply(apply_ewma)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "c259b783-2031-4372-af62-4318db15a3ca",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\andre\\AppData\\Local\\Temp\\ipykernel_20164\\1017451334.py:8: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  data = spec_risk.groupby('id', group_keys=False).apply(apply_ewma)\n"
+      "C:\\Users\\andre\\AppData\\Local\\Temp\\ipykernel_2460\\135772750.py:22: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  return spec_risk.groupby('id', group_keys=False, as_index=False).apply(apply_ewma)\n"
      ]
-    }
-   ],
-   "source": [
-    "lambda_val = 0.5 ** (1.0 / settings['cov_set']['hl_stock_var'])\n",
-    "start_val = settings['cov_set']['initial_var_obs']\n",
-    "def apply_ewma(group):\n",
-    "    group['res_vol'] = ewma.ewma_c(group['res'].values, lambda_val, start_val)\n",
-    "    return group\n",
-    "\n",
-    "# Anvend EWMA per gruppe\n",
-    "data = spec_risk.groupby('id', group_keys=False).apply(apply_ewma)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "2906ad6b-21f1-4578-af97-e8cd371fff53",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/html": [
@@ -2357,229 +2374,22 @@
        "[511500 rows x 4 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data"
+    "spec_risk_res_vol = calculate_ewma(spec_risk,settings)\n",
+    "spec_risk_res_vol"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "6c13d09d-b6ae-4415-b4d1-3cca4fb963c3",
+   "cell_type": "markdown",
+   "id": "d51cb4be-cf84-401a-9fd7-19af8b220c9b",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def ewma_variance(x, lambda_, start):\n",
-    "    \"\"\"\n",
-    "    Beregner EWMA-variance (og volatilitet) for en 1-dimensionel array eller pd.Series 'x'.\n",
-    "    Forudsætter, at middelværdien er 0.\n",
-    "    \n",
-    "    Parametre:\n",
-    "      - x: En 1-dimensionel array eller pd.Series med residualer.\n",
-    "      - lambda_: Vægtningsparameteren (0 < lambda_ < 1). Typisk beregnet som 0.5**(1/hl_stock_var).\n",
-    "      - start: Antallet af observationer, der skal bruges til initial beregning af varians.\n",
-    "    \n",
-    "    Returnerer:\n",
-    "      - En numpy-array med volatilitet (dvs. kvadratroden af variansen) for hver observation.\n",
-    "    \"\"\"\n",
-    "    x = np.asarray(x)  # sikre at vi arbejder med en numpy-array\n",
-    "    n = len(x)\n",
-    "    var_vec = np.full(n, np.nan)  # initialiserer en array med NaN\n",
-    "\n",
-    "    # Hvis der ikke er nok observationer, returneres en array med NaN\n",
-    "    if n < start:\n",
-    "        return var_vec\n",
-    "\n",
-    "    # Beregn initial varians baseret på de første 'start' observationer (med antaget middelværdi 0)\n",
-    "    na_count = 0\n",
-    "    initial_sum = 0.0\n",
-    "    for i in range(start):\n",
-    "        if np.isnan(x[i]):\n",
-    "            na_count += 1\n",
-    "        else:\n",
-    "            initial_sum += x[i] ** 2\n",
-    "    denominator = start - 1 - na_count\n",
-    "    if denominator <= 0:\n",
-    "        initial_value = np.nan\n",
-    "    else:\n",
-    "        initial_value = initial_sum / denominator\n",
-    "\n",
-    "    # Sæt den første beregnede varians på position 'start - 1'\n",
-    "    var_vec[start - 1] = initial_value\n",
-    "\n",
-    "    # Iterativ opdatering af EWMA-variansen for de efterfølgende observationer\n",
-    "    for j in range(start, n):\n",
-    "        if np.isnan(x[j - 1]):\n",
-    "            var_vec[j] = var_vec[j - 1]\n",
-    "        else:\n",
-    "            var_vec[j] = lambda_ * var_vec[j - 1] + (1 - lambda_) * (x[j - 1] ** 2)\n",
-    "\n",
-    "    # Returner volatiliteten (kvadratroden af variansen)\n",
-    "    return np.sqrt(var_vec)\n",
-    "\n",
-    "\n",
-    "# Eksempel på anvendelse per gruppe (per id) i en DataFrame:\n",
-    "# Antag at 'spec_risk' er en DataFrame med kolonnerne 'id' og 'res' (residualer)\n",
-    "\n",
-    "# Eksempelindstillinger (disse skal du have defineret i din settings-variabel)\n",
-    "settings = {\n",
-    "    'cov_set': {\n",
-    "        'hl_stock_var': 10,         # Halveringstiden for stock variance, fx 10 dage\n",
-    "        'initial_var_obs': 20       # Antal observationer til initial variansberegning, fx 20\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "lambda_val = 0.5 ** (1.0 / settings['cov_set']['hl_stock_var'])\n",
-    "start_val = settings['cov_set']['initial_var_obs']\n",
-    "\n",
-    "# Anvend funktionen for hver aktie (grupperet efter 'id')\n",
-    "spec_risk['res_vol'] = spec_risk.groupby('id')['res'].transform(lambda x: ewma_variance(x, lambda_val, start_val))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "4662c526-fc81-4d29-9417-53212b0be60f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>date</th>\n",
-       "      <th>res</th>\n",
-       "      <th>res_vol</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10104</td>\n",
-       "      <td>2012-02-01</td>\n",
-       "      <td>0.013814</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10104</td>\n",
-       "      <td>2012-02-02</td>\n",
-       "      <td>-0.003386</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>10104</td>\n",
-       "      <td>2012-02-03</td>\n",
-       "      <td>0.003454</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10104</td>\n",
-       "      <td>2012-02-06</td>\n",
-       "      <td>-0.000870</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10104</td>\n",
-       "      <td>2012-02-07</td>\n",
-       "      <td>0.002190</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>511495</th>\n",
-       "      <td>92655</td>\n",
-       "      <td>2023-11-24</td>\n",
-       "      <td>0.000802</td>\n",
-       "      <td>0.006002</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>511496</th>\n",
-       "      <td>92655</td>\n",
-       "      <td>2023-11-27</td>\n",
-       "      <td>-0.001250</td>\n",
-       "      <td>0.005801</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>511497</th>\n",
-       "      <td>92655</td>\n",
-       "      <td>2023-11-28</td>\n",
-       "      <td>-0.004159</td>\n",
-       "      <td>0.005613</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>511498</th>\n",
-       "      <td>92655</td>\n",
-       "      <td>2023-11-29</td>\n",
-       "      <td>0.010920</td>\n",
-       "      <td>0.005527</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>511499</th>\n",
-       "      <td>92655</td>\n",
-       "      <td>2023-11-30</td>\n",
-       "      <td>0.017196</td>\n",
-       "      <td>0.006041</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>511500 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           id       date       res   res_vol\n",
-       "0       10104 2012-02-01  0.013814       NaN\n",
-       "1       10104 2012-02-02 -0.003386       NaN\n",
-       "2       10104 2012-02-03  0.003454       NaN\n",
-       "3       10104 2012-02-06 -0.000870       NaN\n",
-       "4       10104 2012-02-07  0.002190       NaN\n",
-       "...       ...        ...       ...       ...\n",
-       "511495  92655 2023-11-24  0.000802  0.006002\n",
-       "511496  92655 2023-11-27 -0.001250  0.005801\n",
-       "511497  92655 2023-11-28 -0.004159  0.005613\n",
-       "511498  92655 2023-11-29  0.010920  0.005527\n",
-       "511499  92655 2023-11-30  0.017196  0.006041\n",
-       "\n",
-       "[511500 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spec_risk"
+    "## ved ik om virker"
    ]
   },
   {
@@ -2779,14 +2589,6 @@
    "source": [
     "spec_risk_m"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f7af4b4e-6a64-452e-a825-28e1240328bc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
