--- a/Lokalt_test_cov_matrix_korrekt.ipynb
+++ b/Lokalt_test_cov_matrix_korrekt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "141e613d-79ae-4867-b819-bcdfe3c54ee4",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Features list length: 154\n"
+      "Features list length: 154\n",
+      "All missing excludes 0.60% of the observations\n",
+      "Filen er indlæst og filtreret succesfuldt.\n",
+      "No size screen\n",
+      "Turnover wo addition/deletion rule: 0.19%\n",
+      "Turnover w  addition/deletion rule: 33.72%\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mPrepare_Data\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m process_risk_free_rate, process_return_data, wealth_func, load_and_filter_market_returns_test, process_all_data, process_cluster_labels\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mGeneral_Functions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m size_screen_fun, addition_deletion_fun\n\u001b[1;32m----> 8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mEstimate_Covariance_Matrix\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m process_cluster_data\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstats\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m rankdata\n",
+      "File \u001b[1;32m~\\PycharmProjects\\Master\\Estimate_Covariance_Matrix.py:308\u001b[0m\n\u001b[0;32m    305\u001b[0m \u001b[38;5;66;03m# Kald funktionen\u001b[39;00m\n\u001b[0;32m    306\u001b[0m chars, daily \u001b[38;5;241m=\u001b[39m process_all_data(file_path_usa_test, daily_file_path, file_path_world_ret, risk_free_path, market_path)\n\u001b[1;32m--> 308\u001b[0m cluster_data_d, ind_factors, clusters \u001b[38;5;241m=\u001b[39m process_cluster_data(chars, daily, file_path_cluster_labels, file_path_factor_details)\n\u001b[0;32m    310\u001b[0m fct_ret_est \u001b[38;5;241m=\u001b[39m run_regressions_by_date(cluster_data_d, ind_factors, clusters)\n\u001b[0;32m    312\u001b[0m fct_ret \u001b[38;5;241m=\u001b[39m create_factor_returns(fct_ret_est)\n",
+      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 3)"
      ]
     }
    ],
