--- a/Lokal_test_jonas.ipynb
+++ b/Lokal_test_jonas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "e236671d-9024-452f-a612-cb725c6c4c93",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,128 @@
     "import numpy as np\n",
     "import ewma\n",
     "import sqrtm_cpp\n",
-    "from portfolio_choice_functions import m_func, m_static"
+    "from portfolio_choice_functions import m_func, m_static\n",
+    "from Prepare_Data import process_all_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee41fa45-e190-4710-bc21-c0ed362d2f7d",
+   "metadata": {},
+   "source": [
+    "## Markowitz-ML"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2edc519f-bec3-4896-96c1-a5dd465ca7f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All missing excludes 0.60% of the observations\n",
+      "Filen er indlæst og filtreret succesfuldt.\n",
+      "No size screen\n",
+      "Turnover wo addition/deletion rule: 0.19%\n",
+      "Turnover w  addition/deletion rule: 33.72%\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Henter chars\n",
+    "file_path_usa_test = \"./data_test/usa_test.parquet\"\n",
+    "daily_file_path = \"./data_test/usa_dsf_test.parquet\"\n",
+    "file_path_world_ret = \"./data_test/world_ret_test.csv\"\n",
+    "risk_free_path = \"./data_test/risk_free_test.csv\"\n",
+    "market_path = \"./data_test/market_returns_test.csv\"\n",
+    "\n",
+    "# Kald funktionen\n",
+    "chars, daily = process_all_data(file_path_usa_test, daily_file_path, file_path_world_ret, risk_free_path, market_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "951e52c5-e7c8-4c65-8bc5-86059f609354",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a9ac085-6b24-40a1-bb19-8c13601b67d8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9579d978-971a-475b-a9ec-b668a50bdc85",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f204d94-e5dc-45e7-9090-54b996b6681c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ff5790b-3c93-488e-bf75-a1b75a229ddf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a10f9d4-172c-422e-bf4c-fa0896f2d236",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75604e09-b882-4c9d-bcf8-9c140e1325f4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28024273-48f5-4522-8127-d90557224117",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "872de632-3529-4852-82f7-567e520244bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a418b8dc-b5cb-4d2a-a9fc-c1ff4e192ba6",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## Forskellige test på funktioner"
    ]
   },
   {
