--- a/Markowitz_ML.ipynb
+++ b/Markowitz_ML.ipynb
@@ -2,15 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "id": "2a9e4c7d-2cee-47e7-a893-93f6ee4afddb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Features list length: 154\n"
+     ]
+    }
+   ],
    "source": [
     "import Estimate_Covariance_Matrix as ECM\n",
     "from portfolio_choice_functions import ew_implement\n",
     "from prepare_portfolio_data import define_important_dates, create_date_ranges\n",
-    "from Main import settings, pf_set, features\n",
+    "\n",
     "import pandas as pd\n",
     "from datetime import datetime\n",
     "from pandas.tseries.offsets import MonthEnd\n",
@@ -14218,7 +14226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
