Markowitz ML ekstra

--- a/Markowitz_ML.ipynb
+++ b/Markowitz_ML.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "2a9e4c7d-2cee-47e7-a893-93f6ee4afddb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Features list length: 154\n"
+     ]
+    }
+   ],
    "source": [
     "import Estimate_Covariance_Matrix as ECM\n",
     "from portfolio_choice_functions import ew_implement\n",
