Generer nye brugervalgte testsets

--- a/Create testsets.ipynb
+++ b/Create testsets.ipynb
@@ -34,7 +34,9 @@
     "file_path_crsp_a_stock_with_id = \"./Data/crsp_a_stock_codes.csv\"\n",
     "file_path_cluster_labels = \"./Data/Cluster Labels.csv\"\n",
     "file_path_factor_details = \"./Data/Factor Details.xlsx\"\n",
-    "file_path_tsla = \"./Data/tsla101.csv\""
+    "file_path_tsla = \"./Data/tsla101.csv\"\n",
+    "file_path_world_ret = \"./Data/world_ret_monthly.csv\"\n",
+    "print(1)"
    ]
   },
   {
@@ -56,10 +58,11 @@
    "outputs": [],
    "source": [
     "#output paths: \n",
-    "risk_free_test_path = \"./data_test/risk_free_test.csv\"\n",
-    "output_path_usa_dsf = \"./data_test/usa_dsf_test.parquet\"\n",
-    "output_path_usa = \"./data_test/usa_test.parquet\"\n",
-    "output_path_market_returns = \"./data_test/market_returns_test.csv\""
+    "risk_free_test_path = \"./data_test/risk_free_thres_test.csv\"\n",
+    "output_path_usa_dsf = \"./data_test/usa_dsf_thres_test.parquet\"\n",
+    "output_path_usa = \"./data_test/usa_thres_test.parquet\"\n",
+    "output_path_market_returns = \"data_test/market_returns_thres_test.csv\"\n",
+    "world_ret_thres_test_path = \"./data_test/world_ret_thres_test.csv\""
    ]
   },
   {
@@ -70,8 +73,8 @@
    "outputs": [],
    "source": [
     "#Dates\n",
-    "start_date = pd.to_datetime('1970-12-31')\n",
-    "end_date = pd.to_datetime('2023-11-30')\n",
+    "start_date = pd.to_datetime('1952-12-31')\n",
+    "end_date = pd.to_datetime('2020-12-31')\n",
     "#Threshold \n",
     "thres = 0.95 #(vi beholder de øverste 10%, hvis den er lig 0.9)"
    ]
@@ -269,11 +272,12 @@
    "source": [
     "# Find første og sidste dato i dataset\n",
     "first_date = df_thres_ids['eom'].min()\n",
+    "first_date2 = pd.to_datetime('2000-12-31')\n",
     "last_date = df_thres_ids['eom'].max()\n",
     "\n",
     "# Filtrer virksomheder, der har data på både første og sidste dato\n",
     "df_thres_ids = df_thres_ids.groupby('id').filter(\n",
-    "    lambda x: (first_date in x['eom'].values) and (last_date in x['eom'].values)\n",
+    "    lambda x: (first_date2 in x['eom'].values) and (last_date in x['eom'].values)\n",
     ")\n",
     "# Udskriv antal unikke virksomheder efter filtrering\n",
     "print(f\"Antal unikke virksomheder med data på både første og sidste dato: {df_thres_ids['id'].nunique()}\")"
@@ -296,8 +300,8 @@
    "source": [
     "df_ids = pd.DataFrame(df_thres_ids['id'].unique(), columns=['id'])\n",
     "# Gem til en CSV-fil uden index-kolonne\n",
-    "df_ids.to_csv(\"./data_test/top_5_percent_ids.csv\", index=False)\n",
-    "\n",
+    "df_ids.to_csv(\"./data_test/top_thres_percent_ids.csv\", index=False)\n",
+    "    \n",
     "print(\"Fil gemt som 'top_thres_percent_ids.csv'\")"
    ]
   },
@@ -316,7 +320,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path_id_test = \"./data_test/top_5_percent_ids.csv\""
+    "file_path_id_test = \"./data_test/top_thres_percent_ids.csv\"\n",
+    "file_path_usa = \"./Data/usa_rvol.parquet\" #Vi skal have den med rvol som er med i"
    ]
   },
   {
@@ -355,40 +360,9 @@
     "data_run_files.filter_ids_from_dataset(file_path_usa, file_path_id_test, output_path_usa, start_date)\n",
     "data_run_files.filter_and_save_data(file_path_market_returns, start_date, end_date, output_path_market_returns)\n",
     "h_list = [1]  # Horisonter\n",
-    "dataret = data_run_files.monthly_returns(risk_free, h_list, output_path_usa)"
+    "dataret = data_run_files.monthly_returns(risk_free, h_list, output_path_usa)\n",
+    "data_run_files.world_ret_monthly_test_filter(file_path_id_test, file_path_world_ret, start_date, end_date, output_file = world_ret_thres_test_path)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d17048d-13f2-41a5-b3e9-64c21e78d5d5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "938d0179-d7f6-4375-80b9-49afa63cf7e6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5641d667-5098-446e-b7cd-1d57926401bf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f814202-1f2b-4ad8-bcca-5289e8db8c73",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -407,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
